--- a/SASS/components/_images.scss
+++ b/SASS/components/_images.scss
@@ -53,7 +53,7 @@
 }
 
 .bell-svg {
-    margin-left: 150px;
+    //margin-left: 150px;
     width: 25px;
     margin-top: 20px;
 
